feat: Flyway V2 + Card entity migration (String → @ManyToOne FK)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>